[gd_scene load_steps=5 format=3 uid="uid://cvu8hl5ebie1o"]

[ext_resource type="Script" uid="uid://cp0kcsjld7ltx" path="res://scripts/aptitude_column.gd" id="1_apt"]
[ext_resource type="PackedScene" uid="uid://dns3quhbw1hhx" path="res://scenes/components/souffrance_node.tscn" id="2_souff"]
[ext_resource type="PackedScene" uid="uid://v3ebl4m062sa" path="res://scenes/components/action_node.tscn" id="3_action3"]
[ext_resource type="Theme" uid="uid://bk5igrtvvlm3j" path="res://themes/character_sheet_theme.tres" id="4_theme"]

[node name="AptitudeColumn" type="VBoxContainer"]
clip_contents = true
size_flags_horizontal = 3
theme = ExtResource("4_theme")
theme_override_constants/separation = 4
script = ExtResource("1_apt")

[node name="ColumnsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="AttributesColumn" type="VBoxContainer" parent="ColumnsContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="MainAttributeLabel" type="Label" parent="ColumnsContainer/AttributesColumn"]
layout_mode = 2
size_flags_horizontal = 3
text = "FORCE"
horizontal_alignment = 1

[node name="MainAttributeSpinBox" type="SpinBox" parent="ColumnsContainer/AttributesColumn"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
min_value = -50.0
max_value = 50.0

[node name="HSeparator" type="HSeparator" parent="ColumnsContainer/AttributesColumn"]
layout_mode = 2

[node name="ATBValuesContainer" type="VBoxContainer" parent="ColumnsContainer/AttributesColumn"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="ATB3Label" type="Label" parent="ColumnsContainer/AttributesColumn/ATBValuesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
text = "FOR"
horizontal_alignment = 1

[node name="ATB2Label" type="Label" parent="ColumnsContainer/AttributesColumn/ATBValuesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
text = "AGI"
horizontal_alignment = 1

[node name="ATB1Label" type="Label" parent="ColumnsContainer/AttributesColumn/ATBValuesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
text = "DEX"
horizontal_alignment = 1

[node name="ColumnSeparator" type="VSeparator" parent="ColumnsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AptitudeColumn" type="VBoxContainer" parent="ColumnsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="HeaderContainer" type="VBoxContainer" parent="ColumnsContainer/AptitudeColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="ColumnsContainer/AptitudeColumn/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Puissance"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="ColumnsContainer/AptitudeColumn/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
theme_override_font_sizes/font_size = 41
text = "+0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SouffranceSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SouffranceNode" parent="." instance=ExtResource("2_souff")]
layout_mode = 2

[node name="ActionsSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="Action0" parent="ActionsContainer" instance=ExtResource("3_action3")]
layout_mode = 2

[node name="ActionSeparator1" type="HSeparator" parent="ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Action1" parent="ActionsContainer" instance=ExtResource("3_action3")]
layout_mode = 2
action_id = 1

[node name="ActionSeparator2" type="HSeparator" parent="ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Action2" parent="ActionsContainer" instance=ExtResource("3_action3")]
layout_mode = 2
action_id = 2
